const_typed_builder_test/compile_fail/group_3.stderr
error: Multiple adds to the same group

         = help: Remove this attribute

 --> ./compile_fail/group_3.rs:8:27
  |
8 |         #[builder(group = baz)]
  |                           ^^^

error[E0599]: no function or associated item named `builder` found for struct `Foo` in the current scope
  --> ./compile_fail/group_3.rs:13:27
   |
6  |     pub struct Foo {
   |     -------------- function or associated item `builder` not found for this struct
...
13 |     let foobuilder = Foo::builder().bar("Hello world!".to_string()).baz("Hello world!".to_string()).build();
   |                           ^^^^^^^ function or associated item not found in `Foo`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `builder`, perhaps you need to implement it:
           candidate #1: `const_typed_builder::Builder`
